--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,7 @@
 body {
     font-family: 'Roboto', sans-serif;
     background: linear-gradient(to bottom right, #defdd8, #f7fafc);
-    color: #343a40;
+    color: #ffffff;
     line-height: 1.6;
 }
 
@@ -19,7 +19,7 @@ body {
 }
 
 .header {
-    background-color: #356c39;
+    background-color: #965a16;
     text-align: center;
     padding: 1em 0;
     color: white;
@@ -48,13 +48,13 @@ nav a {
 }
 
 nav a:hover {
-    color: #46c248;
+    color: #d39a29;
     transform: scale(1.1);
 }
 
 /* Оформление разделов с анимацией */
 .section-category {
-    background-color: #52a75f;
+    background-color: #b27a30;
     border-radius: 12px;
     padding: 1.5rem;
     margin-bottom: 2rem;
@@ -63,7 +63,7 @@ nav a:hover {
 
 .section-category:hover {
     transform: scale(1.05);
-    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 8px 16px rgba(255, 255, 255, 0.1);
 }
 
 .section-category h2 {
@@ -82,7 +82,7 @@ nav a:hover {
 }
 
 .start-quiz-btn:hover {
-    background-color: #3ab43e;
+    background-color: #b48b3a;
 }
 
 .category-list {
@@ -90,6 +90,11 @@ nav a:hover {
     column-gap: 1.5rem;
     font-size: 1.1rem;
     line-height: 1.5;
+    /* Добавляем рамки вокруг текста категорий */
+    border: 2px solid #9D6D2B;
+    border-radius: 12px;
+    padding: 1rem;
+    background-color: rgba(255, 255, 255, 0.1); /* Прозрачность фона внутри рамки */
 }
 
 .category-list li {
@@ -101,6 +106,11 @@ nav a:hover {
     counter-reset: tip-count;
     list-style: none;
     padding-left: 0;
+    /* Рамка вокруг советов по уходу */
+    border: 2px solid #9D6D2B;
+    border-radius: 12px;
+    padding: 1rem;
+    background-color: rgba(255, 255, 255, 0.1); /* Прозрачность фона внутри рамки */
 }
 
 .tip-list li {
@@ -115,7 +125,7 @@ nav a:hover {
     position: absolute;
     left: 0;
     font-weight: bold;
-    color: #356c39;
+    color: #9d6d2b;
 }
 
 .developer-list li {
@@ -123,7 +133,7 @@ nav a:hover {
 }
 
 footer {
-    background-color: #356c39;
+    background-color: #975f26;
     padding: 1em 0;
     text-align: center;
     color: white;
